// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentTestView renders with a GettingStartedView when a Getting started item is selected 1`] = `
<React.Fragment>
  <BannerWarnings
    deps={
      {
        "getAssessmentActionMessageCreator": [Function],
        "getProvider": [Function],
      }
    }
    test={-1}
    visualizationStoreData={
      {
        "scanning": "test-scanning",
        "tests": {},
      }
    }
    warningConfiguration={{}}
  />
  <TargetChangeDialog
    deps={
      {
        "getAssessmentActionMessageCreator": [Function],
        "getProvider": [Function],
      }
    }
    newTab={
      {
        "id": -2,
        "title": "test title",
        "url": "test url",
      }
    }
  />
  <GettingStartedView
    assessment={{}}
    deps={
      {
        "getAssessmentActionMessageCreator": [Function],
        "getProvider": [Function],
      }
    }
  />
</React.Fragment>
`;

exports[`AssessmentTestView renders with a RequirementView when a requirement is selected 1`] = `
<React.Fragment>
  <BannerWarnings
    deps={
      {
        "getAssessmentActionMessageCreator": [Function],
        "getProvider": [Function],
      }
    }
    test={-1}
    visualizationStoreData={
      {
        "scanning": "test-scanning",
        "tests": {},
      }
    }
    warningConfiguration={{}}
  />
  <TargetChangeDialog
    deps={
      {
        "getAssessmentActionMessageCreator": [Function],
        "getProvider": [Function],
      }
    }
    newTab={
      {
        "id": -2,
        "title": "test title",
        "url": "test url",
      }
    }
  />
  <RequirementView
    assessmentData={{}}
    assessmentInstanceTableHandler={{}}
    assessmentNavState={
      {
        "selectedTestSubview": "step",
        "selectedTestType": -1,
      }
    }
    currentTarget={
      {
        "id": -2,
        "title": "test title",
        "url": "test url",
      }
    }
    deps={
      {
        "getAssessmentActionMessageCreator": [Function],
        "getProvider": [Function],
      }
    }
    featureFlagStoreData={{}}
    isRequirementEnabled={false}
    pathSnippetStoreData={{}}
    requirementViewComponentConfiguration={{}}
    scanningInProgress={true}
  />
</React.Fragment>
`;
